Add Youdao AI support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "curtime",
         "dialoguer",
-        "reqwest"
+        "hasher",
+        "reqwest",
+        "youdao"
     ]
 }
