--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "translator_mangler"
 description = "Mangle your input text by translating it over and over again."
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 authors = [ "CSharperMantle <baorong2005@126.com>" ]
 license = "BSD-3-Clause"
@@ -10,7 +10,9 @@ homepage = "https://github.com/CSharperMantle/translator_mangler"
 
 [dependencies]
 dialoguer = "0.10.0"
-md5 = "0.7.0"
+hex = "0.4.3"
+md-5 = "0.10.1"
 rand = "0.8.5"
 reqwest = { version = "0.11.10", features = ["blocking", "json"] }
 serde = { version = "1.0.137", features = ["derive"] }
+sha2 = "0.10.2"
