--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "translator_mangler"
 description = "Mangle your input text by translating it over and over again."
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 authors = [ "CSharperMantle <baorong2005@126.com>" ]
 license = "BSD-3-Clause"
@@ -9,8 +9,8 @@ readme = "README.md"
 homepage = "https://github.com/CSharperMantle/translator_mangler"
 
 [dependencies]
-dialoguer = "0.10.0"
 hex = "0.4.3"
+inquire = "0.2.1"
 md-5 = "0.10.1"
 rand = "0.8.5"
 reqwest = { version = "0.11.10", features = ["blocking", "json"] }
