Apply smaller RNG library; Bump to 0.4.1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "curtime",
         "dialoguer",
+        "fastrand",
         "hasher",
         "reqwest",
         "youdao"
